feat: add wechat api and wechat pay (#12)
